[package]
name = "mixnet"
edition = "2021"
description = "Mixnet protocol for libp2p"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/paritytech/mixnet/"
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
arrayref = "0.3.6"
arrayvec = "0.7.2"
bitflags = "1.3.2"
blake2 = "0.10.6"
c2-chacha = "0.3.3"
curve25519-dalek = "3.2.0"
either = "1.5.3"
futures = "0.3.25"
futures-timer = "3.0.2"
hashlink = "0.8.1"
libp2p-core = { version = "0.38.0", default-features = false }
libp2p-swarm = "0.41.1"
lioness = "0.1.2"
log = "0.4.17"
multiaddr = "0.16.0"
rand = "0.7.2"
rand_chacha = "0.2.2"
rand_distr = "0.3.0"
siphasher = "0.3.10"
subtle = "2.4.1"
thiserror = "1.0.30"
void = "1.0"
x25519-dalek = "1.1.1"

[dev-dependencies]
async-std = "1.12"
env_logger = "0.9.3"
itertools = "0.10.5"
libp2p-mplex = "0.38.0"
libp2p-noise = "0.41.0"
libp2p-tcp = {version = "0.38.0", features = ["async-io"]}
libp2p-yamux = "0.42.0"
once_cell = "1.17.1"
rand_xoshiro = "0.4.0"
