[package]
name = "mixnet"
edition = "2021"
description = "Mixnet protocol for libp2p"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/paritytech/mixnet/"
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
arrayref = "0.3.6"
arrayvec = "0.7.2"
bitflags = "1.3.2"
blake2 = "0.10.6"
c2-chacha = "0.3.3"
curve25519-dalek = "4.0.0-rc.1"
either = "1.5.3"
futures = "0.3.25"
futures-timer = "3.0.2"
hashlink = "0.8.2"
libp2p-core = { version = "0.39.2", default-features = false }
libp2p-identity = { version = "0.1.2", features = ["peerid"] }
libp2p-swarm = "0.42.2"
lioness = "0.1.2"
log = "0.4.17"
multiaddr = "0.17.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
siphasher = "0.3.10"
subtle = "2.4.1"
thiserror = "1.0.30"
void = "1.0"
zeroize = "1.6.0"

[dev-dependencies]
async-std = "1.12"
env_logger = "0.10.0"
itertools = "0.10.5"
libp2p-mplex = "0.39.0"
libp2p-noise = "0.42.2"
libp2p-tcp = {version = "0.39.0", features = ["async-io"]}
once_cell = "1.17.1"
rand_xoshiro = "0.6.0"
