[package]
name = "mixnet"
edition = "2021"
description = "A mix network based on Loopix"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/paritytech/mixnet/"
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
arrayref = "0.3.6"
arrayvec = "0.7.2"
bitflags = "1.3.2"
blake2 = "0.10.4"
c2-chacha = "0.3.3"
curve25519-dalek = "4.0.0-rc.1"
either = "1.5.3"
hashlink = "0.8.2"
lioness = "0.1.2"
log = "0.4.17"
multiaddr = "0.17.1"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
subtle = "2.4.1"
thiserror = "1.0.30"
zeroize = "1.6.0"

[dev-dependencies]
env_logger = "0.10.0"
itertools = "0.10.5"
rand_xoshiro = "0.6.0"
